# hanwha-aerospace-share

./: .gitignore  README.md
SemanticTRIPLoader/: CMakeLists.txt  README.md  package.xml
SemanticTRIPLoader/include/: trip_loader.hpp  utils.hpp
SemanticTRIPLoader/launch/: load_bunker.launch  load_gazebo.launch
SemanticTRIPLoader/map/: download_maps.sh
SemanticTRIPLoader/rviz/: trip_loader.rviz
SemanticTRIPLoader/src/: trip_loader_node.cpp
SemanticTRIPLoader/src/trip_ros1/: trip_loader_node.hpp  utils_ros1.hpp
husky/husky_control/config/: control.yaml  teleop_ps4.yaml
husky/husky_control/launch/: control.launch
husky/husky_description/urdf/: OS0-128.urdf.xacro  OS1-64.urdf.xacro  gps.urdf.xacro  husky.urdf.xacro  sensor_description.urdf  stereo_camera.urdf  stereo_camera.urdf.xacro  vlp.urdf
mppi_controller/: CMakeLists.txt  package.xml  setup.py
mppi_controller/include/mppi_ctrl/: __init__.py  gpgridmap.py  mppi.py  utils.py  vehicle_model_husky.py
mppi_controller/launch/: mppi_ctrl_husky.launch
mppi_controller/src/: main_node_husky.py
natural_enviroments/launch/: add_husky_lakepark.launch  create_lakepark.launch  simulator_empty_world.launch
natural_enviroments/scripts/: add_odom_frame.py  fixer_husky.py  get_cam_compressed.py  get_cam_raw.py  get_pano_cam.py
natural_enviroments/scripts/gazebo_data_processing/: get_cam_grd_rpy.py  get_cam_sat.py  get_lidargps.py  get_rpy.py  get_rpy_old.py  get_sat_map.py  merge_gpsrpy.py  open_bin.py
natural_enviroments/stereo_camera/: model.sdf
natural_enviroments/urdf/: camear_sensor.urdf
natural_enviroments/worlds/: arbolpartes1.txt  arbolpartes2.txt  create_arbolpartes.py  create_pine.py  create_roca.py  create_tree.py  forest_lightened.world  hill_r1.world  hill_r1_tagged.world  hill_tagged.world  hill_test.world  hill_tree.wold  hill_v1.world  hill_v2.world  hill_v2_tagged.world  hill_v3.world  hill_v3_tagged.world  kim  lake_0.world  lakepark.world  lakepark5.world  lakepark_tagged.world  lakepark_v1.world  lakepark_v2.world  park.world  pine1.txt  pine2.txt  random_object.py  roca1.txt  roca2.txt  tag_list.py  tag_list_old.py  tag_world.py  tag_world_old.py  test.world  test_1  test_11.world  transform_world.py
planning_module/: CMakeLists.txt  package.xml
planning_module/launch/: main.launch
planning_module/launch/config/: params.yaml
planning_module/msg/: PathData.msg
planning_module/script/: tf_pub.py
planning_module/src/: main_planning.cpp
test_pkg/: package.xml
test_pkg/src/: hanwha_loop_test.py  hanwha_manual_setting.py  hanwha_user_test.py
