<?xml version="1.0"?>
<package format="2">
  <name>trip_loader</name>
  <version>1.0.0</version>
  <description>The trip_loader package</description>

  <maintainer email="minho.oh@kaist.ac.kr">Minho Oh</maintainer>
  <maintainer email="dhalsgh03@gmail.com">Minho Oh</maintainer>

  <license>X-Dream-Lab</license>

  <author email="minho.oh@kaist.ac.kr">Minho Oh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>  

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>grid_map_ros</build_depend>
  <build_export_depend>grid_map_ros</build_export_depend>
  <exec_depend>grid_map_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
