<package>
  <name>planning_module</name>
  <version>0.0.0</version>
  <description>
    Outdoor Nav Project
  </description>
  <author email="minsung.yoon@kaist.ac.kr">MinsungYoon</author>
  <maintainer email="minsung.yoon@kaist.ac.kr">MinsungYoon</maintainer>

  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ompl</run_depend>

</package>
